--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,10 +12,10 @@
 
 <body>
     <header>
-        <a href="">Home</a>
+        <a href=" {% url 'post_list' %}">Home</a>
     </header>
     {% block content %}
     {% endblock content %}
-</body>
+    </body>
 
 </html>
